# LearnOpenGL

./: .gitignore  CMakeLists.txt  DrawTriangle.cpp  main.cpp
include/: LearnOpenGLHeader.h  MeshInfo.h  ModelInfo.h  Shader.h
lib/: glad.c
shader/triangle/: MoveTriangle.fsh  MoveTriangle.vsh
src/: DrawTriangle.cpp  LearnOpenGL.cpp
src/LightNormal/: LightMulti.fsh  LightMulti.h  LightNormal.fsh  LightNormal.h  LightNormal.vsh
src/MatrixTest/: MatrixTest.fsh  MatrixTest.h  MatrixTest.vsh  MatrixTest2.fsh  MatrixTest2.h  MatrixTest2.vsh
src/Mesh/: ModelImport.h
src/TextureTest/: TextureTest.cpp  TextureTest.fsh  TextureTest.vsh
src/shader/: MoveTriangle.cpp  MoveTriangle.fsh  MoveTriangle.vsh
third/assimp/assimp_arm64-osx/: CONTROL
third/assimp/assimp_arm64-osx/lib/pkgconfig/: assimp.pc
third/assimp/assimp_arm64-osx/share/assimp/: assimpConfig.cmake  assimpTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
utils/: Shader.h  ShaderReader.h
